--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 terraform.tfstate
 terraform.tfstate.backup
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.100.0/windows_amd64/terraform-provider-aws_v5.100.0_x5.exe
+bin
+obj
