--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ terraform.tfstate.backup
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.100.0/windows_amd64/terraform-provider-aws_v5.100.0_x5.exe
 bin
 obj
+ec2-key
+ec2-key.pub
