Implement PostgreSQL database with IAM authentication and update API endpoints in .NET Web API

--- a/webapi.csproj
+++ b/webapi.csproj
@@ -4,4 +4,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="8.0.5" />
+    <PackageReference Include="AWSSDK.RDS" Version="3.7.400" />
+  </ItemGroup>
 </Project>
